Uploaded image for project: 'Mesos'
  1. Mesos
  2. MESOS-4198

Disk Resource Reservation is NOT Enforced for Persistent Volumes

    XMLWordPrintableJSON

Details

    • Mesosphere Sprint 25
    • 3

    Description

      If I create a persistent volume on a reserved disk resource, I am able to write data in excess of my reserved size.

      Disk resource reservation should be enforced just as "cpus" and "mem" reservations are enforced.

      Attachments

        Issue Links

          Activity

            People

              hartem Artem Harutyunyan
              gabriel.hartmann@gmail.com Gabriel Hartmann
              Jie Yu Jie Yu
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: