Added support for enforcing quota on (persistent) volumes (MESOS-4198).

Review: https://reviews.apache.org/r/41705/