src/slave/containerizer/mesos/isolators/posix/disk.cpp
@@ -38,6 +38,7 @@
 #include <stout/lambda.hpp>
 #include <stout/numify.hpp>
 #include <stout/strings.hpp>
+#include <stout/path.hpp>
 
 #include <stout/os/exists.hpp>
 #include <stout/os/killtree.hpp>
@@ -167,13 +168,23 @@ Future<Nothing> PosixDiskIsolatorProcess::update(
 
     // NOTE: We do not allow the case where has_disk() is true but
     // with nothing set inside DiskInfo. The master will enforce it.
-    if (!resource.has_disk()) {
-      // Regular disk used for executor working directory.
+    if (!resource.has_disk() || !resource.disk().has_volume()) {
+      // If either DiskInfo or DiskInfo.Volume are not set we're dealing
+      // with the working directory of the executor (aka the sanbox).
       path = info->directory;
     } else {
-      // TODO(jieyu): Support persistent volmes as well.
-      LOG(ERROR) << "Enforcing disk quota unsupported for " << resource;
-      continue;
+      // Otherwise it is a disk resource (such as a persistent volume) and
+      // we extract the path from the protobuf.
+      path = resource.disk().volume().container_path();
+
+      // In case the path in the protobuf is not an absolute path it is
+      // relative to the working directory of the executor. We always store
+      // the absolute path.
+      if (!path::absolute(path)) {
+        // We prepend "/" at the end to make sure that 'du' runs on actual
+        // directory pointed by the symlink (and not the symlink itself).
+        path = path::join(info->directory, path, "");
+      }
     }
 
     quotas[path] += resource;
@@ -272,6 +283,7 @@ Future<ResourceStatistics> PosixDiskIsolatorProcess::usage(
     return Failure("Unknown container");
   }
 
+  // TODO(hartem): Report volume usage  as well (MESOS-4263).
   ResourceStatistics result;
 
   const Owned<Info>& info = infos[containerId];
